backend/vulnerability_analysis/testing/iof1/full/klee-out-0/test000001.user.err
Error: Wrong size given to klee_make_symbolic
File: final_tc/int_overflow3_klee.c
Line: 31
assembly.ll line: 7950
State: 1
Stack: 
	#000007950 in __klee_posix_wrapped_main() at final_tc/int_overflow3_klee.c:31
	#100006107 in __user_main(1, 140279231283200, 140279231283216) at src/runtime/POSIX/klee_init_env.c:245
	#200000561 in __uClibc_main(140263452311552, 1, 140279231283200, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000726 in main(1, 140279231283200)
